14 implementing hateoas (#9)
* start HATEOAS

* Adding mockito dependency

* person service tests

* test with null object

* Changing mapping from Dozer to ModelMapper